base template cleanup

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -51,15 +51,9 @@
       </div>
 
     </div>
-
   </div>
 
-
-
-
-    {% block content %}Empty page{% endblock %}
-
-  </div>
+  {% block content %} {% endblock %}
 
   <footer id="base-footer" class="footer">
     <hr/>
