--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -6,7 +6,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12" align="center">
-      <h1>Example Homepage</h1>
+      <h1>Homepage</h1>
     </div>
   </div>
 </div>
