--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -17,9 +17,9 @@
 
   <link rel="stylesheet" href="{% static 'lib/bootstrap-3.3.7/css/bootstrap.min.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'lib/bootstrap-3.3.7/css/bootstrap-flatly.min.css' %}" type="text/css">
-  <link rel="stylesheet" href="{% static 'lib/custom.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'css/custom.css' %}" type="text/css">
 
-  <script src="{% static 'lib/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'lib/jquery-3.1.1/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'lib/bootstrap-3.3.7/js/bootstrap.min.js' %}" type="text/javascript"></script>
 
   {% block headcontent_end %}{% endblock %}
@@ -51,7 +51,17 @@
 
         <ul class="nav navbar-nav navbar-right">
           {% if user.is_authenticated %}
-            <li><a href="/accounts/logout"><b>Log out</b></a></li>
+            <li class="dropdown">
+              <a href="/" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="/userprofile/{{ user.id }}/"><i class="glyphicon glyphicon-user"></i> {{ user.username }}</a></li>
+                <li><a href="/accounts/logout"><i class="glyphicon glyphicon-log-out"></i> Log out</a></li>
+                {% if user.is_superuser %}
+                <li role="presentation" class="divider"></li>
+                <li><a href="/admin"><i class="glyphicon glyphicon-wrench"></i> admin</a></li>
+                {% endif %}
+              </ul>
+            </li>
           {% else %}
             <li><a href="/accounts/login"><b>Log in</b></a></li>
             <li><a href="/accounts/register"><b>Sign up</b></a></li>
