create a global version number context variable

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -77,11 +77,17 @@
   <footer id="base-footer" class="footer">
     <hr/>
     <div class="row" align="center">
-      <div class="col-sm-1 col-sm-offset-5">
+      <div class="col-sm-1 col-sm-offset-4">
         <h6><a href="">About</a></h6>
       </div>
       <div class="col-sm-1">
         <h6><a href="">Contact</a></h6>
+      </div>
+      <div class="col-sm-1">
+        <h6><a href="">Contribute</a></h6>
+      </div>
+      <div class="col-sm-1">
+        <h6>v{{ project_version }}</h6>
       </div>
     </div>
   </footer>
