add some lorem ipsum paragraphs to the homepage

--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -6,8 +6,17 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12" align="center">
-      <h1>Homepage</h1>
+      <h2>Homepage</h2>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-sm-12" align="left">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent erat arcu, molestie eu augue quis, faucibus venenatis urna. Aliquam ultrices sit amet metus et blandit. Suspendisse eleifend erat sed augue malesuada gravida. Donec sodales dictum mauris accumsan rhoncus. Sed non mauris elementum risus tempor porta sed congue eros. Nunc tempor felis quis erat lobortis tincidunt non quis sapien. Aenean sed maximus odio. Aliquam et felis ut nulla pretium varius. Aliquam dapibus fermentum metus ac pharetra. Sed tincidunt, ante quis vestibulum eleifend, tortor libero tristique velit, id ultricies ante massa eget ante. Phasellus posuere quam at quam aliquet dapibus. Morbi nec cursus libero. Ut mauris augue, interdum at quam quis, ultricies imperdiet eros. Nulla ac volutpat metus.</p>
+
+      <p>Ut consequat pharetra urna vel viverra. Sed elementum mauris id nisl sagittis, quis dictum neque egestas. Nulla dapibus justo non turpis tristique laoreet quis ut ante. Donec sit amet risus aliquam, scelerisque mauris rhoncus, viverra tellus. Proin arcu ipsum, maximus accumsan iaculis vitae, vulputate in eros. Proin est odio, vulputate id nulla vel, dignissim congue mi. Ut sit amet enim ac sem consectetur porta a in odio. Donec vel consectetur velit. Morbi iaculis aliquam euismod. Duis ut mollis urna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur finibus, sem at imperdiet placerat, sapien dui venenatis mi, id hendrerit justo sapien iaculis justo. Aliquam sit amet mi in libero faucibus pharetra. </p>
+    </div>
+  </div>
+
 </div>
 {% endblock %}
