create about, contribute, contact pages, views and urls

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -78,13 +78,13 @@
     <hr/>
     <div class="row" align="center">
       <div class="col-sm-1 col-sm-offset-4">
-        <h6><a href="">About</a></h6>
+        <h6><a href="{% url 'about' %}">About</a></h6>
       </div>
       <div class="col-sm-1">
-        <h6><a href="">Contact</a></h6>
+        <h6><a href="{% url 'contact' %}">Contact</a></h6>
       </div>
       <div class="col-sm-1">
-        <h6><a href="">Contribute</a></h6>
+        <h6><a href="{% url 'contribute' %}">Contribute</a></h6>
       </div>
       <div class="col-sm-1">
         <h6>v{{ project_version }}</h6>
