move navbar and footer template to its own file

--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -1,6 +1,6 @@
 {% extends "website/base.html" %}
 
-{% block title %}Homepage Title{% endblock %}
+{% block title %}Homepage {{ block.super }}{% endblock %}
 
 {% block content %}
 <div class="container">
