--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 {% load static %}
-{% load bootstrap3 %}
 
 <html>
 
@@ -28,69 +27,11 @@
 
 <body>
 
-  <div class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/"><b>Project Name</b></a>
-      </div>
-
-      <div class="navbar-collapse collapse navbar-responsive-collapse">
-        <ul class="nav navbar-nav">
-
-          <li><a href="/">MenuItem1</a></li>
-
-          <li><a href="/">MenuItem2</a></li>
-
-        </ul>
-
-        <ul class="nav navbar-nav navbar-right">
-          {% if user.is_authenticated %}
-            <li class="dropdown">
-              <a href="/" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i> <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="/userprofile/{{ user.id }}/"><i class="glyphicon glyphicon-user"></i> {{ user.username }}</a></li>
-                <li><a href="/accounts/logout"><i class="glyphicon glyphicon-log-out"></i> Log out</a></li>
-                {% if user.is_superuser %}
-                <li role="presentation" class="divider"></li>
-                <li><a href="/admin"><i class="glyphicon glyphicon-wrench"></i> admin</a></li>
-                {% endif %}
-              </ul>
-            </li>
-          {% else %}
-            <li><a href="/accounts/login"><b>Log in</b></a></li>
-            <li><a href="/accounts/register"><b>Sign up</b></a></li>
-          {% endif %}
-        </ul>
-      </div>
-
-    </div>
-  </div>
+  {% include "website/navbar.html" %}
 
   {% block content %} {% endblock %}
 
-  <footer id="base-footer" class="footer">
-    <hr/>
-    <div class="row" align="center">
-      <div class="col-sm-1 col-sm-offset-4">
-        <h6><a href="{% url 'about' %}">About</a></h6>
-      </div>
-      <div class="col-sm-1">
-        <h6><a href="{% url 'contact' %}">Contact</a></h6>
-      </div>
-      <div class="col-sm-1">
-        <h6><a href="{% url 'contribute' %}">Contribute</a></h6>
-      </div>
-      <div class="col-sm-1">
-        <h6>v{{ project_version }}</h6>
-      </div>
-    </div>
-  </footer>
+  {% include "website/footer.html" %}
 
 </body>
 
