remove non existing css class

--- a/website/templates/website/navbar.html
+++ b/website/templates/website/navbar.html
@@ -10,7 +10,7 @@
         <a class="navbar-brand" href="/"><b>Project Name</b></a>
       </div>
 
-      <div class="navbar-collapse collapse navbar-responsive-collapse">
+      <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
 
           <li><a href="/">MenuItem1</a></li>
