--- a/website/templates/registration/login.html
+++ b/website/templates/registration/login.html
@@ -7,12 +7,10 @@
 <div class="container">
 
   <center><h3>Log in</h3></center>
-  {% if error %}
-  {{ error }}
-  {% endif %}
+
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
-
+      {% bootstrap_form_errors form %}
       <form action="" method="post">
         {% csrf_token %}
         {% bootstrap_label "Username or email" label_for="id_username" %}
