Upgrade to Django 2 and Bootstrap 4

--- a/website/templates/registration/password_reset_confirm.html
+++ b/website/templates/registration/password_reset_confirm.html
@@ -5,12 +5,14 @@
 {% block content %}
 <div class="container">
 
-  <center><h3>Reset password</h3></center>
+  {% with page_title="Reset password" %}
+  {% include "website/items/page_title.html" %}
+  {% endwith %}
 
   <div class="row">
-    <div class="col-md-4 col-md-offset-4">
-
+    <div class="col-md-4 offset-md-4">
       <p>Enter your new password below to reset your password:</p>
+      {% bootstrap_form_errors form %}
       <form method="post" action="">
         {% csrf_token %}
         {% bootstrap_form form %}
