--- a/website/templates/registration/password_reset_form.html
+++ b/website/templates/registration/password_reset_form.html
@@ -5,13 +5,16 @@
 {% block content %}
 <div class="container">
 
-  <center><h3>Password reset request</h3></center>
+  {% with page_title="Request password reset" %}
+  {% include "website/items/page_title.html" %}
+  {% endwith %}
 
   <div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-4 offset-md-4">
       <p>
         Forgot your password? Enter your email and we'll send you instructions for creating a new one.
       </p>
+      {% bootstrap_form_errors form %}
       <form method="post" action="">
         {% csrf_token %}
         {% bootstrap_form form %}
