--- a/website/templates/website/footer.html
+++ b/website/templates/website/footer.html
@@ -1,7 +1,7 @@
   <footer id="base-footer" class="footer">
     <hr/>
-    <div class="row" align="center">
-      <div class="col-sm-1 col-sm-offset-4">
+    <div class="row text-center">
+      <div class="col-sm-1 offset-sm-4">
         <h6><a href="{% url 'about' %}">About</a></h6>
       </div>
       <div class="col-sm-1">
