--- a/website/templates/registration/login.html
+++ b/website/templates/registration/login.html
@@ -6,10 +6,12 @@
 
 <div class="container">
 
-  <center><h3>Log in</h3></center>
+  {% with page_title="Log in" %}
+  {% include "website/items/page_title.html" %}
+  {% endwith %}
 
   <div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-4 offset-md-4">
       {% bootstrap_form_errors form %}
       <form action="" method="post">
         {% csrf_token %}
