--- a/website/templates/registration/logout.html
+++ b/website/templates/registration/logout.html
@@ -8,8 +8,8 @@
     {{ error }}
   {% endif %}
 
-  <div class="row" align="center">
-    <div class="col-md-4 col-md-offset-4">
+  <div class="row">
+    <div class="col-md-4 offset-md-4 text-center">
       <h4>You are logged out.</h4>
       <h4><a href="/accounts/login/">Log in</a></h4>
     </div>
