--- a/website/templates/registration/password_change_done.html
+++ b/website/templates/registration/password_change_done.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 <div class="container">
-  <h4>Password succesfully changed!</h4>
+
+  {% with page_title="Password successfully changed!" %}
+  {% include "website/items/page_title.html" %}
+  {% endwith %}
+
 </div>
 {% endblock %}
