--- a/website/templates/registration/password_change_form.html
+++ b/website/templates/registration/password_change_form.html
@@ -5,11 +5,13 @@
 {% block content %}
 <div class="container">
 
-  <center><h3>Change password</h3></center>
+  {% with page_title="Change password" %}
+  {% include "website/items/page_title.html" %}
+  {% endwith %}
 
   <div class="row">
-    <div class="col-md-4 col-md-offset-4">
-
+    <div class="col-md-4 offset-md-4">
+      {% bootstrap_form_errors form %}
       <form method="post" action="">
         {% csrf_token %}
         {% bootstrap_form form %}
