--- a/website/templates/registration/password_reset_complete.html
+++ b/website/templates/registration/password_reset_complete.html
@@ -2,9 +2,15 @@
 
 {% block content %}
 <div class="container">
-  <h4>
-    Your password has been reset!
-    You may now <a href="{{ login_url }}">log in</a>.
-  </h4>
+
+  <div class="row text-center">
+    <div class="col">
+      <h4>
+        Your password has been reset!
+        You may now <a href="{{ login_url }}">log in</a>.
+      </h4>
+    </div>
+  </div>
+
 </div>
 {% endblock %}
