--- a/website/templates/registration/registration_closed.html
+++ b/website/templates/registration/registration_closed.html
@@ -3,6 +3,10 @@
 {% block content %}
 
 <div class="container">
-  <center><h3>Sorry. Registration is currently closed :(</h3></center>
+
+  {% with page_title="Sorry. Registration is currently closed :(" %}
+  {% include "website/items/page_title.html" %}
+  {% endwith %}
+
 </div>
 {% endblock %}
