--- a/website/templates/registration/registration_complete.html
+++ b/website/templates/registration/registration_complete.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <div class="container">
-  <div class="row">
-    <div class="col-md-12" align="center">
-      <h3>Welcome!</h3>
-    </div>
-  </div>
+
+  {% with page_title="Welcome" %}
+  {% include "website/items/page_title.html" %}
+  {% endwith %}
+
 </div>
 {% endblock %}
