--- a/website/templates/registration/registration_form.html
+++ b/website/templates/registration/registration_form.html
@@ -7,17 +7,16 @@
 
 <div class="container">
 
-  <div class="row">
-    <div class="col-md-4 col-md-offset-4">
-      <center><h3>Sign up</h3></center>
+  {% with page_title="Sign up" %}
+  {% include "website/items/page_title.html" %}
+  {% endwith %}
 
-      {% if error %}
-        {{ error }}
-      {% endif %}
+  <div class="row">
+    <div class="col-md-4 offset-md-4">
 
       {% if registered %}
         <div class="row">
-          <div class="col-md-12" align="center">
+          <div class="col-md-12 text-center">
             <h4>You have successfully registered!</h4>
             <h4>Please <a href="/accounts/login/">Log in</a> to get started.</h4>
           </div>
@@ -27,6 +26,7 @@
       {% if form %}
       <div class="row">
         <div class="col-md-12">
+          {% bootstrap_form_errors form %}
           <form action="" method="post">
             {% csrf_token %}
             {% bootstrap_form form show_help=False %}
