--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -2,23 +2,24 @@
 
 {% load static %}
 
-<html>
+<html lang="en">
 
 <head>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>{% block title %}| Project Name{% endblock %}</title>
 
   {% block headcontent %}{% endblock %}
 
-  <link rel="stylesheet" href="{% static 'lib/bootstrap-3.3.7/css/bootstrap-flatly.min.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/custom.css' %}" type="text/css">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-  <script src="{% static 'lib/jquery-3.1.1/jquery-3.1.1.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'lib/bootstrap-3.3.7/js/bootstrap.min.js' %}" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
   {% block headcontent_end %}{% endblock %}
 
