--- a/website/templates/website/contact.html
+++ b/website/templates/website/contact.html
@@ -1,18 +1,20 @@
 {% extends "website/base.html" %}
 
-{% block title %}About {{ block.super }}{% endblock %}
+{% block title %}Contact {{ block.super }}{% endblock %}
 
 {% block content %}
 
-<div class="row" align="center">
-  <h3>Contact</h3>
-</div>
+<div class="container">
 
-<div class="row">
+  {% with page_title="Contact" %}
+  {% include "website/items/page_title.html" %}
+  {% endwith %}
 
-  <div class="col-sm-8 - col-sm-offset-2" align="left">
-    <p>This is an example contact page. The contact email is defined in 'local_settings.py'.</p>
-    <p>You can contact us at <a href="mailto:{{ contact_email }}">{{ contact_email }}</a>.</p>
+  <div class="row">
+    <div class="col-sm-8 offset-sm-2">
+      <p>This is an example contact page. The contact email is defined in 'local_settings.py'.</p>
+      <p>You can contact us at <a href="mailto:{{ contact_email }}">{{ contact_email }}</a>.</p>
+    </div>
   </div>
 
 </div>
