--- a/website/templates/website/userprofile.html
+++ b/website/templates/website/userprofile.html
@@ -12,7 +12,7 @@
   {% if messages %}
   <div class="vertical-spacer-20"></div>
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-6 offset-md-3">
       {% for message in messages %}
       <div class="alert alert-success"><a href="#" class="close" data-dismiss="alert">&times;</a><span>{{ message }}</span></div>
       {% endfor %}
@@ -20,15 +20,13 @@
   </div>
   {% endif %}
 
-  <div class="row">
-    <div class="col-md-12" align="center">
-      <h3>{{ user.username }}</h3>
-    </div>
-  </div>
+  {% with page_title=user.username %}
+  {% include "website/items/page_title.html" %}
+  {% endwith %}
 
   <div class="row">
-    <div class="col-md-4 col-md-offset-4">
-
+    <div class="col-md-4 offset-md-4">
+      {% bootstrap_form_errors form %}
       <form method="post" action="">
         {% csrf_token %}
         {% bootstrap_form form %}
@@ -39,7 +37,7 @@
         {% endbuttons %}
       </form>
 
-      <a class="btn btn-success" role="button" href="/accounts/password/change" title="Change password">change password</a>
+      <a class="btn btn-success" role="button" href="/accounts/password/change" title="Change password">Change password</a>
 
     </div>
   </div>
